# cursor-telegram-hook

./: README.md  claude-hook.py  config.json  install_claude_code.py  send_and_wait.py  setup.py  wait_for_reply.py
dashboard/: app.py  run.py
dashboard/templates/: index.html
skill/: SKILL.md
telegram_mcp/: README.md  bot_client.py  config.py  install.py  pyproject.toml  registry.py  server.py  telegram_client.py
