[project]
name = "telegram-mcp"
version = "0.1.0"
description = "Telegram MCP server for Claude Code — send notifications and wait for replies mid-task"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "telethon>=1.36.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
