[project]
name = "telegram-mcp"
version = "0.2.0"
description = "Telegram MCP server for Claude Code — send notifications and wait for replies mid-task"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
